--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ REACT_APP_MESSAGING_SENDER=831116540061
 REACT_APP_APP_ID=1:831116540061:web:78e7131fb51f9c8d34fc74
 
 #IMDB API
-REACT_APP_IMDB_API_KEY=
+# REACT_APP_IMDB_API_KEY=
