--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
-    "@babel/plugin-proposal-private-property-in-object": []
-  }
+    "tailwindcss": "^3.4.1"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC"
 }
